fix issue with window scroll jump up when modal

--- a/src/index.css
+++ b/src/index.css
@@ -9,19 +9,19 @@ html {
   -moz-osx-font-smoothing: grayscale;
 }
 
-@media screen and (min-width: 960px) {
-  html {
-    /* fix for scrollbar compoensation */
-    width: 100vw;
-    overflow-x: hidden;
-  }
-}
-
 body {
   height: 100%;
   margin: 0;
   padding: 0;
   font-family: "Lato", sans-serif;
+}
+
+@media screen and (min-width: 960px) {
+  body {
+    /* fix for scrollbar compoensation */
+    width: 100vw;
+    overflow-x: hidden;
+  }
 }
 
 @media print {
